jpetstore/jpetstore-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jpetstore-ingress
spec:
  rules:
  - host: jpetstore.rtbsystems.com
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web
            port: 
              number: 80
