jpetstore/jpetstore-mmssearch.yaml
kind: Service
apiVersion: v1
metadata:
  name: mmssearch
  namespace: jpetstore
spec:
  selector:
    app: mmssearch
  ports:
  - port: 8080
    targetPort: 8080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mmssearch
  namespace: jpetstore
spec:
  replicas: 1
  selector:
      matchLabels:
        app: mmssearch
  template:
    metadata:
      labels:
        app: mmssearch
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: mmssearch
        image: vdbharbor.vdoubleb.com/demo/mmssearch:latest
        ports:
        - containerPort: 8080
        volumeMounts:
         - name: service-secrets
           mountPath: "/etc/secrets"
           readOnly: true
      volumes:
      - name: service-secrets
        secret:
          secretName: mms-secret
          items:
          - key: mms-secrets
            path: mms-secrets.json
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jpetstore-ingress-mms
  namespace: jpetstore
spec:
  rules:
  - host: mmssearch.vdoubleb.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mmssearch
            port:
              number: 8080
