jpetstore/jpetstore.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jpetstoreweb
  namespace: jpetstore
spec:
  replicas: 1
  selector:
      matchLabels:
        app: jpetstoreweb
  template:
    metadata:
      labels:
        app: jpetstoreweb
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: jpetstoreweb
        image: vdbharbor.vdoubleb.com/demo/jpetstore:v2
        ports:
        - containerPort: 9080
        readinessProbe:
          httpGet:
            path: /
            port: 9080
          initialDelaySeconds: 10
          periodSeconds: 5
---
kind: Service
apiVersion: v1
metadata:
  name: web
  namespace: jpetstore
spec:
  selector:
    app: jpetstoreweb
  ports:
  - port: 80
    targetPort: 9080
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jpetstoredb
  namespace: jpetstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jpetstoredb
  template:
    metadata:
      labels:
        app: jpetstoredb
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: jpetstoredb
        image: vdbharbor.vdoubleb.com/demo/jpetstoredb:latest
        ports:
        - containerPort: 3306
---
kind: Service
apiVersion: v1
metadata:
  name: db
  namespace: jpetstore
spec:
  selector:
    app: jpetstoredb
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jpetstore-ingress
  namespace: jpetstore
spec:
  rules:
  - host: jpetstore.vdoubleb.com
    http: 
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web
            port: 
              number: 80
